--- a/templates/partials/shared/doubledown.hbs
+++ b/templates/partials/shared/doubledown.hbs
@@ -6,7 +6,7 @@
 		
 		{{> component/instructions
 				decider=true 
-				heading="Read the text in the blue box outloud"
+				heading="Read the text in the blue box aloud"
 				body="Once you finish speaking, press next to continue"
 		}}
 
@@ -31,7 +31,7 @@
 		
 		{{> component/instructions
 				decider=true 
-				heading="Read the text in the blue box outloud"
+				heading="Read the text in the blue box aloud"
 				body="Once you finish speaking, press next to continue"
 		}}
 
@@ -56,7 +56,7 @@
 		
 		{{> component/instructions
 				decider=true 
-				heading="Read the text in the blue box outloud"
+				heading="Read the text in the blue box aloud"
 				body="Once you finish speaking, press next to continue"
 		}}
 
@@ -82,7 +82,7 @@
 		
 		{{> component/instructions
 				decider=true 
-				heading="Read the text in the blue box outloud"
+				heading="Read the text in the blue box aloud"
 				body="Remind the player who is deciding that they need to choose to buy time or pass."
 		}}
 
@@ -128,7 +128,7 @@
 		
 		{{> component/instructions
 				decider=true 
-				heading="Read the text in the blue box outloud"
+				heading="Read the text in the blue box aloud"
 				body="Once you finish speaking, press next to continue"
 		}}
 
