--- a/templates/partials/shared/meet.hbs
+++ b/templates/partials/shared/meet.hbs
@@ -11,7 +11,7 @@
 
 		{{> component/instructions 
 				decider=true
-				heading="Read the text in the blue box out loud"
+				heading="Read the text in the blue box aloud"
 				body="Once you finish speaking the instructions to other players, press next to continue."
 		}}
 
@@ -36,7 +36,7 @@
 
 		{{> component/instructions 
 				decider=true
-				heading="Read the text in the blue box out loud"
+				heading="Read the text in the blue box aloud"
 				body="Once everyone has reviewed their hidden agenda items, press next to continue."
 		}}
 
@@ -61,22 +61,22 @@
 
 		{{> component/instructions 
 				decider=true
-				heading="Read the text in the blue box out loud"
+				heading="Read the text in the blue box aloud"
 				body="Once you have finished speaking the instructions, press next to continue"
 		}}
 
 		{{> component/instructions 
 				heading="Listen to the Decider"
-				body="On your turn, read your character role title and bio outloud to the group."
+				body="On your turn, read your character role title and bio aloud to the group."
 		}}
 
 		{{> component/speech 
 				decider=true
-				body="On your turn, you will introduce yourself by reading your stakeholder role and short bio to the group. Do not read your hidden agenda items out loud!"
+				body="On your turn, you will introduce yourself by reading your stakeholder role and short bio to the group. Do not read your hidden agenda items aloud!"
 		}}
 
 		{{> component/speech 
-				body="On your turn, you will introduce yourself by reading your stakeholder role and short bio to the group. Do not read your hidden agenda items out loud!"
+				body="On your turn, you will introduce yourself by reading your stakeholder role and short bio to the group. Do not read your hidden agenda items aloud!"
 		}}
 
 	</div>
@@ -88,7 +88,7 @@
 			
 			{{> component/instructions 
 					decider=true
-					heading="Read the text in the blue box out loud"
+					heading="Read the text in the blue box aloud"
 					body="When the player has finished introducing themselves, press next to continue."
 			}}
 
@@ -115,7 +115,7 @@
 		
 		{{> component/instructions 
 				decider=true
-				heading="Read the text in the blue box out loud"
+				heading="Read the text in the blue box aloud"
 				body="Once you have finished speaking the instructions, press next to continue."
 		}}
 
