--- a/templates/partials/shared/pitch.hbs
+++ b/templates/partials/shared/pitch.hbs
@@ -6,7 +6,7 @@
 		
 		{{> component/instructions
 				decider=true 
-				heading="Read the text in the blue box outloud"
+				heading="Read the text in the blue box aloud"
 				body="Once you finish speaking the instructions to other players, press next to continue."
 		}}
 
@@ -30,7 +30,7 @@
 		
 		{{> component/instructions
 				decider=true 
-				heading="Read the text in the blue box outloud"
+				heading="Read the text in the blue box aloud"
 				body="Once you finish speaking the instructions to other players, press next to continue."
 		}}
 
@@ -54,7 +54,7 @@
 		
 		{{> component/instructions
 				decider=true 
-				heading="Read the text in the blue box outloud"
+				heading="Read the text in the blue box aloud"
 				body="Once you finish speaking the instructions to other players, press next to continue."
 		}}
 
