--- a/templates/partials/shared/rules.hbs
+++ b/templates/partials/shared/rules.hbs
@@ -2,7 +2,7 @@
 		
 	{{> component/instructions 
 			decider=true
-			heading="Read the text in the blue box out loud"
+			heading="Read the text in the blue box aloud"
 			body="Once you have finished speaking the instructions to other players, press next"
 	}}
 
@@ -26,7 +26,7 @@
 		
 	{{> component/instructions 
 			decider=true
-			heading="Read the text in the blue box out loud"
+			heading="Read the text in the blue box aloud"
 			body="Once you have finished speaking the instructions to other players, press next"
 	}}
 
@@ -50,7 +50,7 @@
 		
 	{{> component/instructions 
 			decider=true
-			heading="Read the text in the blue box out loud"
+			heading="Read the text in the blue box aloud"
 			body="Once you have finished speaking the instructions to other players, press next"
 	}}
 
@@ -75,7 +75,7 @@
 		
 	{{> component/instructions 
 			decider=true
-			heading="Read the text in the blue box out loud"
+			heading="Read the text in the blue box aloud"
 			body="Once you have finished speaking the instructions to other players, press next"
 	}}
 
@@ -99,7 +99,7 @@
 		
 	{{> component/instructions 
 			decider=true
-			heading="Read the text in the blue box out loud"
+			heading="Read the text in the blue box aloud"
 			body="Once you have finished speaking the instructions to other players, press next"
 	}}
 
@@ -123,7 +123,31 @@
 		
 	{{> component/instructions 
 			decider=true
-			heading="Read the text in the blue box out loud"
+			heading="Read the text in the blue box aloud"
+			body="Once you have finished speaking the instructions to other players, press next"
+	}}
+
+	{{> component/instructions 
+			heading="Listen to the Decider"
+			body="The decider will read the tutorial text aloud to the group and advance to the next screen"
+	}}
+
+	{{> component/speech 
+			decider=true
+			body="Once a winner is selected, each stakeholder's agenda items are revealed and the decider determines if the winning proposal includes that item."
+	}}
+
+	{{> component/speech 
+			body="Once a winner is selected, each stakeholder's agenda items are revealed and the decider determines if the winning proposal includes that item."
+	}}
+
+</div>
+
+<div class="screen">
+		
+	{{> component/instructions 
+			decider=true
+			heading="Read the text in the blue box aloud"
 			body="Once you have finished speaking the instructions to other players, press next"
 	}}
 
@@ -147,7 +171,7 @@
 		
 	{{> component/instructions 
 			decider=true
-			heading="Read the text in the blue box out loud"
+			heading="Read the text in the blue box aloud"
 			body="Once you have finished speaking the instructions to other players, press next"
 	}}
 
@@ -158,155 +182,11 @@
 
 	{{> component/speech 
 			decider=true
-			body="Win bonus coins by having agenda items within the selected proposal. Even if the winning proposal is not your own!"
+			body="The winner of the round becomes the Decider for the next round, and the player with the most coins at the end of 3 rounds wins!"
 	}}
 
 	{{> component/speech 
-			body="Win bonus coins by having agenda items within the selected proposal. Even if the winning proposal is not your own!"
-	}}
-
-</div>
-
-<div class="screen">
-		
-	{{> component/instructions 
-			decider=true
-			heading="Read the text in the blue box out loud"
-			body="Once you have finished speaking the instructions to other players, press next"
-	}}
-
-	{{> component/instructions 
-			heading="Listen to the Decider"
-			body="The decider will read the tutorial text aloud to the group and advance to the next screen"
-	}}
-
-	{{> component/speech 
-			decider=true
-			body="The goal of the game is to pitch the best proposal...as well as incorporating your hidden agenda items!"
-	}}
-
-	{{> component/speech 
-			body="The goal of the game is to pitch the best proposal...as well as incorporating your hidden agenda items!"
-	}}
-
-</div>
-
-<div class="screen">
-		
-	{{> component/instructions 
-			decider=true
-			heading="Read the text in the blue box out loud"
-			body="Once you have finished speaking the instructions to other players, press next"
-	}}
-
-	{{> component/instructions 
-			heading="Listen to the Decider"
-			body="The decider will read the tutorial text aloud to the group and advance to the next screen"
-	}}
-
-	{{> component/speech 
-			decider=true
-			body="There are 3 rounds in each game of @stake."
-	}}
-
-	{{> component/speech 
-			body="There are 3 rounds in each game of @stake."
-	}}
-
-</div>
-
-<div class="screen">
-		
-	{{> component/instructions 
-			decider=true
-			heading="Read the text in the blue box out loud"
-			body="Once you have finished speaking the instructions to other players, press next"
-	}}
-
-	{{> component/instructions 
-			heading="Listen to the Decider"
-			body="The decider will read the tutorial text aloud to the group and advance to the next screen"
-	}}
-
-	{{> component/speech 
-			decider=true
-			body="At the start of the game, the first decider begins with 300 coins. And each stakeholder begins with 200 coins."
-	}}
-
-	{{> component/speech 
-			body="At the start of the game, the first decider begins with 300 coins. And each stakeholder begins with 200 coins."
-	}}
-
-</div>
-
-<div class="screen">
-		
-	{{> component/instructions 
-			decider=true
-			heading="Read the text in the blue box out loud"
-			body="Once you have finished speaking the instructions to other players, press next"
-	}}
-
-	{{> component/instructions 
-			heading="Listen to the Decider"
-			body="The decider will read the tutorial text aloud to the group and advance to the next screen"
-	}}
-
-	{{> component/speech 
-			decider=true
-			body="Every round starts with the 300 coins in the pot. More coins are added to the pot at different times throughout the round."
-	}}
-
-	{{> component/speech 
-			body="Every round starts with the 300 coins in the pot. More coins are added to the pot at different times throughout the round."
-	}}
-
-</div>
-
-<div class="screen">
-		
-	{{> component/instructions 
-			decider=true
-			heading="Read the text in the blue box out loud"
-			body="Once you have finished speaking the instructions to other players, press next"
-	}}
-
-	{{> component/instructions 
-			heading="Listen to the Decider"
-			body="The decider will read the tutorial text aloud to the group and advance to the next screen"
-	}}
-
-	{{> component/speech 
-			decider=true
-			body="Stakeholders win all the coins in the pot if the decider selects their proposal. And any stakeholder whose agenda items are in the winning proposal recieve bonus coins."
-	}}
-
-	{{> component/speech 
-			body="Stakeholders win all the coins in the pot if the decider selects their proposal. And any stakeholder whose agenda items are in the winning proposal recieve bonus coins."
-	}}
-
-</div>
-
-<div class="screen">
-		
-	{{> component/instructions 
-			decider=true
-			heading="Read the text in the blue box out loud"
-			body="Once you have finished speaking the instructions to other players, press next"
-	}}
-
-	{{> component/instructions 
-			heading="Listen to the Decider"
-			body="The decider will read the tutorial text aloud to the group and advance to the next screen"
-	}}
-
-	{{> component/speech 
-			decider=true
-			body="The player with the most coins at the end of 3 rounds is the winner!"
-	}}
-
-	{{> component/speech 
-			body="The player with the most coins at the end of 3 rounds is the winner!"
+			body="The winner of the round becomes the Decider for the next round, and the player with the most coins at the end of 3 rounds wins!"
 	}}
 
 </div>
