--- a/templates/partials/shared/brainstorm.hbs
+++ b/templates/partials/shared/brainstorm.hbs
@@ -5,7 +5,7 @@
 
 		{{> component/instructions 
 				decider=true
-				heading="Read the text in the blue box out loud"
+				heading="Read the text in the blue box aloud"
 				body="Once you finish speaking the instructions to other players, press next to continue."
 		}}
 
@@ -29,7 +29,7 @@
 
 		{{> component/instructions 
 				decider=true
-				heading="Read the text in the blue box out loud"
+				heading="Read the text in the blue box aloud"
 				body="Once you finish speaking the instructions to other players, press next to continue."
 		}}
 
