--- a/templates/partials/shared/decide.hbs
+++ b/templates/partials/shared/decide.hbs
@@ -6,7 +6,7 @@
 
 		{{> component/instructions 
 				decider=true
-				heading="Read the text in the blue box outloud"
+				heading="Read the text in the blue box aloud"
 				body="Once you finish speaking the instructions to other players, press next to continue"
 		}}
 
@@ -73,7 +73,7 @@
 
 		{{> component/instructions 
 				decider=true
-				heading="Read the text in the blue box outloud"
+				heading="Read the text in the blue box aloud"
 				body="Once you finish speaking the instructions to other players, press next to continue."
 		}}
 
