--- a/templates/partials/shared/deliberate.hbs
+++ b/templates/partials/shared/deliberate.hbs
@@ -6,7 +6,7 @@
 
 		{{> component/instructions 
 				decider=true
-				heading="Read the text in the blue box outloud"
+				heading="Read the text in the blue box aloud"
 				body="Once you finish speaking the instructions to other players, press next to continue."
 		}}
 
@@ -31,7 +31,7 @@
 
 		{{> component/instructions 
 				decider=true
-				heading="Read the text in the blue box outloud"
+				heading="Read the text in the blue box aloud"
 				body="Once you finish speaking the instructions to other players, press next to continue."
 		}}
 
@@ -56,7 +56,7 @@
 
 		{{> component/instructions 
 				decider=true
-				heading="Read the text in the blue box outloud"
+				heading="Read the text in the blue box aloud"
 				body="Once you finish speaking the instructions to other players, press next to continue."
 		}}
 
@@ -139,7 +139,7 @@
 
 		{{> component/instructions 
 				decider=true
-				heading="Read the text in the blue box outloud"
+				heading="Read the text in the blue box aloud"
 				body="Once you finish speaking the instructions to other players, press next to continue."
 		}}
 
