--- a/templates/partials/script/player_logic.hbs
+++ b/templates/partials/script/player_logic.hbs
@@ -76,6 +76,9 @@ var playerLogin = function(data) {
     $('gameContent').addClass('lobby');
 
     playerName = $('#player-name').val();
+    playerName = playerName.replace(' ','');
+    console.log(playerName);
+
     sessionStorage.setItem('username', playerName);
     // sessionStorage.setItem('gameCode', gameCode);
 
@@ -236,6 +239,8 @@ $(document).on('click', '.btn.submit_name', function(evt) {
     var data = getFormData($(this));
     var errorBox = $('.form .error');
 
+    
+
     // Hide errors during typing
     $('.form input').keyup(function() {
         $('.form input').removeClass('invalid');
@@ -249,6 +254,9 @@ $(document).on('click', '.btn.submit_name', function(evt) {
 
         return;
     }
+
+    data.name = data.name.replace(' ','');
+    console.log(data.name);
 
     $('#username').text(data.name);
 
