--- a/templates/layouts/base.hbs
+++ b/templates/layouts/base.hbs
@@ -82,7 +82,7 @@
                         </div>
 
                         <div id="logo-header">
-                            {{{cloudinaryUrl "v1490382079/at-stake/layout/logo.svg" width=200 }}}
+                            {{{cloudinaryUrl "v1490382407/at-stake/layout/logo.svg" }}} 
                         </div>
 
                         <button id="btn-reconnect" class="btn" type="submit" name="submit" data-keep_open="true" data-keep_enabled="true">
