--- a/templates/views/game/player.hbs
+++ b/templates/views/game/player.hbs
@@ -1,7 +1,7 @@
 <section id="lobby">
 
   <div id="login-header">
-    <img src="https://res.cloudinary.com/engagement-lab-home/image/upload/v1490382407/at-stake/layout/logo.svg" height='auto' width='200px'> 
+    {{{cloudinaryUrl "v1490382407/at-stake/layout/logo.svg"}}} 
     <p>Deliberate, Negotiate, Decide</p>
   </div>
 
