Added trophy for final winner modal.

--- a/templates/partials/shared/scoreboard.hbs
+++ b/templates/partials/shared/scoreboard.hbs
@@ -61,12 +61,7 @@
 					<h1>Congratulations, <strong>{{winner.username}}</strong>!</h1>
 					<h2>You are the winner of the game! You had the most coins after three rounds.</h2>
 
-			    <div id="reward-icon" class="player-box">
-				    <div class="coins">{{winner_coins}}</div>
-					  <div class="info">
-						  <h1>{{winner.username}}</h1>
-				    </div>
-				  </div>
+          {{{cloudinaryUrl "v1494006833/at-stake/layout/trophy.svg" }}}
 
 				</div>
 			</div>
